# backtrader

./: .gitignore  .markdownlint-cli2.jsonc  .pylintrc  .travis.yml  ENV.sh  Makefile  PLAN.md  PLANNING.md  README.md  __init__.py  agent.py  changelog.txt  create_readme_files.py  demo.ipynb  demo_origin.ipynb  enhance_documentation.py  live_backtrader.py  optimization.py  pylint_head.txt  pylint_report.txt  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  rez  setup.py  strategies.py  test.ipynb  test_feed.ipynb  the_backtradersold_setup.py  try.py  update_readme.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
Tutorials/: 101.py  102.py  103.py  104.py  104_orig.py  README.md  __init__.py  strategy_tester.py  test_strategies.py
arbitrage/: CUSUM.ipynb  CUSUM_GridSearch_CLI.py  JM_J_strategy_CUSUM copy.py  JM_J_strategy_CUSUM.py  JM_J_strategy_CUSUM_GridSearch.py  JM_J_strategy_RSI_Bollinger_GridSearch.py  JM_J_strategy_RSI_GridSearch.py  JM_J_strategy_RSI_MACD_GridSearch.py  JM_J_strategy_ZScore_GridSearch.py  JM_J_strategy_adjust_pair_ratio.py  JM_J_strategy_调整配对比.py  Kalman.py  README.md  common_strategy_utils.py  concat_cusum.py  hold_rb.py  myutil.py  pair_ratio.ipynb  test.py  test_feedspread_yearly.py
backtest/: README.md
backtrader/: README.md  __init__.py  analyzer.py  broker.py  cerebro.py  comminfo.py  dataseries.py  errors.py  feed.py  fillers.py  flt.py  functions.py  indicator.py  linebuffer.py  lineiterator.py  lineroot.py  lineseries.py  listener.py  mathsupport.py  metabase.py  metasigstrategy.py  metastrategy.py  observer.py  order.py  position.py  resamplerfilter.py  signal.py  signalstrategy.py  sizer.py  store.py  strategy.py  talib.py  timer.py  trade.py  tradingcal.py  version.py  writer.py
contrib/: README.md
datas/: README.md
live_backtrader/: live_backtrader.py
logs/: README.md  SPY.csv  TSLA.csv
qmtbt/: test.py  (+4 more)
(+824 files in other folders)
