[tool.poetry]
name = "backtrader"
version = "0.1.0"
description = ""
authors = ["bois1616 <github@hexenwoche.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
statsmodels = "^0.14.3"
matplotlib = "^3.9.2"
requests = "^2.32.3"
polars = "^1.9.0"
yfinance = "^0.2.44"
setuptools = "^75.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
