[tool.poetry]
name = "backtrader"
version = "2.0.0"
description = ""
authors = ["bois1616 <github@hexenwoche.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
statsmodels = "^0.14.3"
matplotlib = "^3.9.2"
requests = "^2.32.3"
polars = "^1.9.0"
yfinance = "^0.2.44"
setuptools = "^75.1.0"
ansicolor = "^0.3.2"
tk = "^0.1.0"
colorama = "^0.4.6"
icecream = "^2.1.3"
loguru = "^0.7.2"
pandas = "^2.2.3"
numpy = "^2.1.3"
pytest = "^8.2.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"

[tool.poetry.extras]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
